test/classes/errors/nilability-init-field-arg/init-field-arg-oknil-owned-from-oknil-borrowed.good
init-field-arg-oknil-owned-from-oknil-borrowed.chpl:9: In initializer:
init-field-arg-oknil-owned-from-oknil-borrowed.chpl:10: error: invalid copy-initialization
init-field-arg-oknil-owned-from-oknil-borrowed.chpl:10: error: cannot initialize 'owned MyClass?' from a 'borrowed MyClass?'
  init-field-arg-oknil-owned-from-oknil-borrowed.chpl:14: called as MyRecord.init(rhs: borrowed MyClass)
